...
}
- (void)viewDidLoad {
    [super viewDidLoad];
    [self.view addSubview:self.logV];
    
    UIButton *btn = [UIButton buttonWithType:UIButtonTypeSystem];
    [btn setTitle:@"开始调用" forState:UIControlStateNormal];
    btn.bounds = CGRectMake(0, 0, 100, 80);
    btn.center = self.view.center;
    [self.view addSubview:btn];
    [btn addTarget:self action:@selector(btnClick:) forControlEvents:UIControlEventTouchUpInside];
}
- (void)btnClick:(UIButton *)btn{
...
