...
    return self;
}
- (void)setup{
    self.backgroundColor = [UIColor whiteColor];
    _btns = [[NSMutableArray alloc] initWithCapacity:0];
    _lines = [[NSMutableArray alloc] initWithCapacity:0];
    self.titles = @[@"1",@"2",@"3",@"<",@"4",@"5",@"6",@" ",@"7",@"8",@"9",@"完成",@".",@"0",@"取消",@""];
    
}
- (void)setTf:(UITextField *)tf{
    _tf = tf;
}
- (void)setTitles:(NSArray *)titles{
...
